src/test/ui/in-band-lifetimes/single_use_lifetimes-5.stderr
error: lifetime name `'x` only used once
  --> $DIR/single_use_lifetimes-5.rs:12:11
   |
12 | trait Foo<'x> { //~ ERROR lifetime name `'x` only used once
   |           ^^
   |
note: lint level defined here
  --> $DIR/single_use_lifetimes-5.rs:10:9
   |
10 | #![deny(single_use_lifetime)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

